--- a/core/templates/partials/footer.html
+++ b/core/templates/partials/footer.html
@@ -3,10 +3,8 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12 text-center">
-        <script>document.write(new Date().getFullYear())</script> &copy; Larkon. Crafted by
-        <iconify-icon icon="iconamoon:heart-duotone" class="fs-18 align-middle text-danger"></iconify-icon>
-        <a
-          href="" class="fw-bold footer-text" target="_blank">Techzaa</a>
+        <script>document.write(new Date().getFullYear())</script> &copy;Copyright Edupan
+        
       </div>
     </div>
   </div>
