--- a/core/static/scss/config/_variables.scss
+++ b/core/static/scss/config/_variables.scss
@@ -40,7 +40,7 @@ $indigo:  #53389f;
 $purple:  #7f56da;
 $pink:    #ff86c8;
 $red:     #ef5f5f;
-$orange:  #ff6c2f;
+$orange:  #0b1156;
 $yellow:  #f9b931;
 $green:   #22c55e;
 $teal:    #040505;
